--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,17 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to root_path, class: "navbar-brand logo" do %>
+      <%= link_to '', root_path, class: 'logo' %>
+      <%= link_to root_path do %>
           <span class="txtLogo1">Jellyfish</span>
           <span class="txtLogo2">Studio</span>
       <% end %>
     </div>
-    <div id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse">
+    <div id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse cl-effect-13">
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to 'Accueil', root_path %></li>
-        <li><a href="#about">Projets</a></li>
-        <li><a href="#contact">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><%= link_to 'Projets', root_path %></li>
+        <li><%= link_to 'Services', root_path %></li>
+        <li><%= link_to 'Contact', root_path %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
