--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,100 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<% if !current_user %>
+<div class="container">
+    <% if !current_user %>
     <%= link_to 'login', new_user_session_path %>
-<% end %>
+    <% end %>
+    
+    <% if current_user %>
+        <%= current_user.email %><br>
+        <%= link_to 'dashboard', dashboard_path %>
+    <% end %>
+</div>
 
-<% if current_user %>
-    <%= current_user.email %><br>
-    <%= link_to 'dashboard', dashboard_path %>
-<% end %>
+<div class="jumbotron">
+    <div class="container">
+        <p>Jellyfish studio est une agence web regroupant des jeunes entrepreneurs dynamiques vous proposant des solutions cousues main pour vos projets web.
+        De la conception de sites web, du développement d'applications mobiles, de l'hébergement, nous vous accompagnons dans votre projet web, quelque soit sa nature.
+        Situés à Paris et à Montpellier, nous créons les solutions web de demain.</p>
+    </div>
+</div>
+
+<div class="container">
+    <div class="head">
+        <span class="droplet"></span>Nos services
+    </div>
+    <div class="row">
+        <div class="col-lg-3 col-md-6 col-xs-12 containerRoundBox">
+            <div class="roundBox animated bounceInLeft">
+                <%= link_to services_path + "#webdesign" do %>
+                    <div class="serviceBox">
+                        <div class="iconWebdesign"></div>
+                    </div>
+                <% end %>
+            </div>
+           
+            <h2>Web</h2>
+            <div class="txtServices">
+                <p>Sites institutionnels, sites e-commerces, CMS personnalisables, Jellyfish Studio vous accompagne pas à pas dans la création de votre solution web.</p>
+                <%= link_to services_path + "#webdesign" do %>
+                    <div class="savoirPlus">En savoir plus</div>
+                <% end %>
+            </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-6 col-xs-12 containerRoundBox">
+            <div class="roundBox animated bounceInLeft">
+                <%= link_to services_path + "#development" do %>
+                    <div class="serviceBox">
+                        <div class="iconDev"></div>
+                    </div>
+                <% end %>
+            </div>
+           
+            <h2>Dévelopment</h2>
+            <div class="txtServices">
+               <p>Projets sur-mesure, front-end, back-end, développement de CMS 100% personnalisables, nous répondons à tous les besoins, même les plus complexes.</p>
+                <%= link_to services_path + "#development" do %>
+                    <div class="savoirPlus">En savoir plus</div>
+                <% end %>
+            </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-6 col-xs-12 containerRoundBox">
+            <div class="roundBox animated bounceInLeft">
+                <%= link_to services_path + "#mobile" do %>
+                    <div class="serviceBox">
+                        <div class="iconTablet"></div>
+                    </div>
+                <% end %>
+            </div>
+           
+            <h2>Application Mobile</h2>
+            <div class="txtServices">
+                <p>Besoin de cibler le marché du mobile ? Nous développons votre Applications iOS ou Android. <br>Il suffit d'une idée et nous la rendons réalitée.</p>
+                <%= link_to services_path + "#mobile" do %>
+                    <div class="savoirPlus">En savoir plus</div>
+                <% end %>
+            </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-6 col-xs-12 containerRoundBox">
+            <div class="roundBox animated bounceInLeft">
+                <%= link_to services_path + "#responsive" do %>
+                    <div class="serviceBox">
+                        <div class="iconIntegration"></div>
+                    </div>
+                <% end %>
+            </div>
+           
+            <h2>Responsive Design</h2>
+            <div class="txtServices">
+                <p>Nous vous proposons de réaliser votre site en utilisant des technologies 'mobile friendly', avec des vues adaptées pour chaque supports et permettant un affichage optimisé.</p>
+                <%= link_to services_path + "#responsive" do %>
+                    <div class="savoirPlus">En savoir plus</div>
+                <% end %>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
