--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     
     <% if current_user %>
         <%= current_user.email %><br>
-        <%= link_to 'dashboard', dashboard_path %>
+        <%= link_to 'dashboard', dashboard_root_path %>
     <% end %>
 </div>
 
