--- a/app/views/dashboard/dashboard/index.html.erb
+++ b/app/views/dashboard/dashboard/index.html.erb
@@ -1,8 +1,49 @@
 <div class="container">
-    
-    <h1>Admin</h1>
-    
-    
-    <%= link_to 'logout', destroy_user_session_path, :method => :delete %>
+    <div class="row">
+        <div class="col-lg-4 col-md-4 cold-xs-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i>Manage</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="list-group">
+                        <%= link_to new_dashboard_project_path, class: 'list-group-item' do %>
+                          New project
+                        <% end %>
+                        <%= link_to destroy_user_session_path, :method => :delete, class: 'list-group-item' do %>
+                          Logout
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-8 col-md-8 cold-xs-8">
+            <div class="row">
+                
+                <% @projects.each do |t| %>
+                    <div class="col-md-4 cold-xs-4">
+                        <%= image_tag t.screenshots if t.screenshots.present? %>
+                    </div>
+                <% end %>
+            </div>
+        </div>
+    </div>
+    <hr></hr>
+    <div class="row">
+        <div class="col-lg-8 col-md-8 cold-xs-8">
+            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+        </div>
+        <div class="col-lg-4 col-md-4 cold-xs-4">
+            <h3>Project Description</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+            <h3>Project Details</h3>
+            <ul>
+                <li>Lorem Ipsum</li>
+                <li>Dolor Sit Amet</li>
+                <li>Consectetur</li>
+                <li>Adipiscing Elit</li>
+            </ul>
+        </div>
+    </div>
     
 </div>
