--- a/app/assets/stylesheets/custom-bootstrap.css
+++ b/app/assets/stylesheets/custom-bootstrap.css
@@ -254,8 +254,13 @@ th {
     border: 1px solid #ddd !important; } }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot");
-  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg"); }
+    src: font-url('glyphicons-halflings-regular.eot');
+    src: font-url('glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+         font-url('glyphicons-halflings-regular.woff2') format('woff2'),
+         font-url('glyphicons-halflings-regular.woff') format('woff'),
+         font-url('glyphicons-halflings-regular.ttf') format('truetype'),
+         font-url('glyphicons-halflings-regular.svg#glyphicons-halflings-regular') format('svg');
+}
 .glyphicon {
   position: relative;
   top: 1px;
