dashboard project show remote details

--- a/app/assets/stylesheets/custom-bootstrap.css
+++ b/app/assets/stylesheets/custom-bootstrap.css
@@ -1134,7 +1134,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #4EAEA0; }
+  border-top: 1px solid #ddd; }
 
 .sr-only {
   position: absolute;
