--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -409,6 +409,11 @@ p {
   }
 }
 
+.project-display{
+  display:none;
+}
+
+
 /*******************************************/
 /****************** FOOTER *****************/
 /*******************************************/
