--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -88,6 +88,45 @@ p {
     }
 }
 
+form{
+  .field{
+    input{
+      border-radius:4px;
+      background-color: #F4F4F4;
+      height:35px;
+      width:500px;
+      margin-bottom:20px;
+      padding-left:10px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    textarea{
+      padding-top:5px;
+      border-radius:4px;
+      background-color: #F4F4F4;
+      height:200px;
+      width:500px;
+      margin-bottom:20px;
+      padding-left:10px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    .file-field{
+      margin:0 auto;
+    }
+  }
+}
+
+.container-small-white{
+  text-align:center;
+  width:700px;
+  margin:40px auto;
+  background-color: #fff;
+  padding:40px;
+  border-radius:8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  h1{
+      margin:0 auto 40px auto;
+  }
+}
 /*******************************************/
 /****************** HEADER *****************/
 /*******************************************/
@@ -346,30 +385,16 @@ p {
 }
 
 .loginContainer{
-    text-align:center;
-    width:500px;
-    margin:80px auto;
-    background-color: #fff;
-    padding:40px;
-    border-radius:8px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    h2{
-        margin:0 auto 40px auto;
-    }
-    form{
-        .field{
-            input{
-                border:none;
-                border-radius:4px;
-                background-color: #F4F4F4;
-                height:35px;
-                width:300px;
-                margin-bottom:20px;
-                padding-left:10px;
-                border: 1px solid rgba(0, 0, 0, 0.1);
-            }
-        }
-    }
+  text-align:center;
+  width:500px;
+  margin:80px auto;
+  background-color: #fff;
+  padding:40px;
+  border-radius:8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  h2{
+      margin:0 auto 40px auto;
+  }
 }
 
 .projects-display{
